#295974 Fabric JS Website Bug: too many scrollbars on choicefieldgroup

--- a/src/documentation/sass/AppContainer.scss
+++ b/src/documentation/sass/AppContainer.scss
@@ -69,7 +69,7 @@ body {
   @include transition-property(left);
   width: $Nav-width;
   min-width: $Nav-width; // @TODO: Figure out why width by itself isn't working
-  overflow: scroll;
+  overflow: auto;
 }
 
 .App-content {
