--- a/src/documentation/sass/ComponentPage.scss
+++ b/src/documentation/sass/ComponentPage.scss
@@ -199,7 +199,7 @@ $dontColor: #A61E22;
 
 .ComponentPage-statesSection,
 .ComponentPage-methodsSection {
-  overflow: scroll;
+  overflow: auto;
 }
 
 
